Changes for 2.0.13rc1

New features:

Bug fixes:

--------------------------------------------------------------------------------
Changes for 2.0.12

2.0.12rc3 was released as 2.0.12 without any changes

--------------------------------------------------------------------------------
Changes for 2.0.12rc3

Bug fixes:
........S. [ZBX-8181] fixed possible entering of "history syncer" process in an eternal loop when processing IT services (dimir)

--------------------------------------------------------------------------------
Changes for 2.0.12rc2

Bug fixes:
...G...... [ZBX-7856] fixed zbx_stat() not working with directories in Windows (wiper)

--------------------------------------------------------------------------------
Changes for 2.0.12rc1

New features:
.......... [ZBX-7811] added example robots.txt file (Richlv)
....IJ.... [ZBXNEXT-1889] made startup.sh and shutdown.sh scripts for Java gateway work in /bin/sh (asaveljevs)
.D........ [ZBX-7597] added description of the returned value types to the agentd manpage (Richlv)
A.F....... [ZBX-1357] updated Brazilian Portuguese, Italian, Japanese, Persian, Russian, Slovak and Ukrainian translations; thanks to Zabbix translators (Richlv)

Bug fixes:
...G...... [ZBX-7301] do not put logrt[] item into unsupported state if log files do not exist (fixed as part of ZBX-6731 solution) (Andris)
..F....... [ZBX-8111] fixed possible XSS in tables with vertical header row cells (Krists)
...G...... [ZBX-8108] fixed reading /proc virtual files without rewinding the file position (Juris)
.......P.. [ZBX-7825] fixed saving of the history data in sequential time order on proxy side (Sasha)
.......PS. [ZBX-4675] added error checks to avoid partial configuration loading (dimir)
.D........ [ZBX-6542] added additional information in the default server configuration file about HousekeepingFrequency parameter (Sasha)
...G...... [ZBX-7856] added workaround for Windows _wstat64() not working with symlinks (wiper)